# how2meet

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  data.db  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: pre-commit-workflow.yaml
alembic/: env.py
alembic/versions/: 1216a96fe98b_rename_event_password.py  4b5f97fcf539_add_event_and_guest_tables.py  6bf5d0febdb0_rename_pw_and_add_email.py
client/: README.md  index.html  package.json
client/src/: App.vue  main.ts  router.ts
client/src/assets/: main.css
client/src/views/: about.vue  home.vue
docs/: README.md
docs/assets/: company-logo.pxd  h2m-logo.pxd  h2m_logo.pxd  h2m_logo_alt.pxd  title.pxd
how2meet/: database.py  event.py  main.py  models.py  schemas.py  utils.py
how2meet/db/: crud.py  database.py  models.py  schemas.py
how2meet/routers/: events.py  invites.py
how2meet/services/: email_service.py  sms.py
how2meet/ui/: app.py  frontend.py  log_config.py  test.py
how2meet/ui/components/: date_utils.py  elements.py  event_editor.py  event_homepage.py  event_model.py  frames.py
how2meet/ui/pages/: events.py  settings.py  urls.py
how2meet/ui/static/: global.css  header.html
tests/: test_crud.py  test_sms.py
