[tool.poetry]
name = "how2meet"
version = "0.1.0"
description = "Frictionless event manager"
authors = ["Ben Memberg <benmemberg@gmail.com>", "Connor Rubin <csrubin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
nicegui = "^1.2.24"
pywebview = "^4.2.2"
sqlalchemy = "^2.0.23"
sqlmodel = "^0.0.14"
twilio = "^8.11.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
mypy = "^1.0.1"
pre-commit = "^3.5.0"
black = "^23.11.0"
isort = "^5.10.1"
ruff = "^0.1.5"
netifaces = "^0.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.mypy]
ignore_missing_imports = true
