[tool.poetry]
name = "how2meet"
version = "0.1.0"
description = "Frictionless event manager"
authors = ["Ben Memberg <benmemberg@gmail.com>", "Connor Rubin <csrubin@gmail.com>", "Taea Vogel <taelxvie@gmail.com"]

[tool.poetry.dependencies]
python = "^3.10"
nicegui = "^1.2.24"
pywebview = "^4.2.2"
sqlalchemy = "^2.0.23"
sqlmodel = "^0.0.14"
httpx = "^0.26.0"
twilio = "^8.11.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
mypy = "^1.0.1"
pre-commit = "^3.5.0"
ruff = "^0.1.5"
netifaces = "^0.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 145

[tool.ruff.lint]
ignore = ["F841", "E722"]
select = [
    # isort
    "I001"
]

[tool.mypy]
ignore_missing_imports = true
